test/data/resolver/valid/with_carry_property_projection.cypher
MATCH (a:Person) WITH a.name AS nm RETURN nm
