test/data/resolver/invalid/union_column_name_mismatch.cypher
MATCH (a:Person) RETURN a.name UNION MATCH (a:Person) RETURN a.age AS name2
